# Rastros-Game-in-C

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  ficheiros.c  ficheiros.h  globals.h  grupo.txt  main.c  mainLogica.c  mainLogica.h  makefile  temp  temp.txt
bot/: auxiliaresBot.c  auxiliaresBot.h  bot  bot.c  bot.h  li2PL6G05  li2pl6g05.c  li2pl6g05.h
doc/: CMakeCCompilerId_8c.xml  README_8md.xml  auxiliaresBot_8c.xml  auxiliaresBot_8h.xml  auxiliaresInterface_8c.xml  auxiliaresInterface_8h.xml  bot_8c.xml  bot_8h.xml  cores_8c.xml  cores_8h.xml  data_8c.xml  data_8h.xml  dir_11ce911c46561379e6389b984aa8c6c9.xml  dir_237aeaf27450e064903edae88ca50e75.xml  dir_30f56cd85179c0aaeec6f92fdf9f3471.xml  dir_3a176b10b1ebe4136373324bac66ff8c.xml  dir_5edcc5f778f619dac0d0225896a592f5.xml  dir_60b7aa3d15560f6c574de9b25e2471e9.xml  dir_62773cb669de775ed99caac67a9e25bf.xml  dir_7e5d7e004b344f685f59d01929914aa0.xml  dir_9975e78fbfd2828f1d3aec52fc9d1efa.xml  dir_a492439b09004102196c42cc22b591a7.xml  dir_c3cb0ea21d9989db96d74569f14ccb13.xml  ficheiros_8c.xml  ficheiros_8h.xml  globals_8c.xml  globals_8h.xml  index.xml  interface_8c.xml  interface_8h.xml  interpretador_8c.xml  interpretador_8h.xml  li2pl6g05_8c.xml  li2pl6g05_8h.xml  listas_8c.xml  listas_8h.xml  logica_8c.xml  logica_8h.xml  main_8c.xml  main_8h.xml  (+7 more)
projeto/: CMakeLists.txt  main.c
projeto/globals/: cores.c  cores.h  globals.c  globals.h
projeto/jogos/: T1  T2  T3  T4
projeto/modules/: data.c  data.h
projeto/modules/interface/: auxiliaresInterface.c  auxiliaresInterface.h  ficheiros.c  ficheiros.h  interface.c  interface.h  interpretador.c  interpretador.h
projeto/modules/listas/: listas.c  listas.h  main.c  main.h
projeto/modules/logica/: logica.c  logica.h
(+158 files in other folders)
